--- a/gmail-alert.yml
+++ b/gmail-alert.yml
@@ -6,11 +6,11 @@ alertmanagerFiles:
     receivers:
     - name: 'gmail-notifications'
       email_configs:
-      - to: example@gmail.com 
-        from: example@gmail.com # Update your from mail id here
+      - to: yasserrahim@gmail.com 
+        from: yasserrahim@gmail.com # Update your from mail id here
         smarthost: smtp.gmail.com:587
-        auth_username: example@gmail.com # Update your from mail id here
-        auth_identity: example@gmail.com # Update your from mail id here
+        auth_username: yasserrahim@gmail.com # Update your from mail id here
+        auth_identity: yasserrahim@gmail.com # Update your from mail id here
         auth_password: password # Update your app-password here
         send_resolved: true
         headers:
